--- a/views/index.erb
+++ b/views/index.erb
@@ -5,5 +5,5 @@
 </label>
      <input id="title" name="title" class="form-control" type="text">
   </div>
-  <button type="submit" class="btn-success">Let's see this title!</button>
+  <button type="submit" class="btn-success">Send</button>
 </form>
